# Battle_for_Rokugan

./: CMakeLists.txt  diff_history.sh  doxygen_script  rules.txt
app/: CMakeLists.txt  battle_for_rokugan.qrc  main.cpp
app/resource/: rules.txt
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_286aa7ad302a5a672c6fd99f3b02678d.html  dir_286aa7ad302a5a672c6fd99f3b02678d.js  dir_82d09425b444363e3b4467d0c156eb11.html  dir_82d09425b444363e3b4467d0c156eb11.js  dir_8864506dae1a8e6a27373e08b8a94d2c.html  dir_8864506dae1a8e6a27373e08b8a94d2c.js  dir_b8ac5d1a50546f363bc0b180119ecdcf.html  dir_b8ac5d1a50546f363bc0b180119ecdcf.js  dir_c559b833701b44a8792da1da6d5ececf.html  dir_c559b833701b44a8792da1da6d5ececf.js  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747.js  dir_d8bfd2e259f0ddcfb2eecd8351ae806f.html  dir_d8bfd2e259f0ddcfb2eecd8351ae806f.js  dir_dbe5e2e62370b34b7d62d99c68f35715.html  dir_dbe5e2e62370b34b7d62d99c68f35715.js  dir_ded90e28d746323109e4a1be828ff560.html  dir_ded90e28d746323109e4a1be828ff560.js  dir_ee8a88512845056fe687c9dc6dcc23b3.html  dir_ee8a88512845056fe687c9dc6dcc23b3.js  dir_f0b27cfaad8cb8ffcdc2ce80de09c8c1.html  dir_f0b27cfaad8cb8ffcdc2ce80de09c8c1.js  dir_f11f06811ff1ee49760cfcc25740b9c0.html  dir_f11f06811ff1ee49760cfcc25740b9c0.js  dir_fa6faaab9cd37a55860ed8c8f1bb5435.html  dir_fa6faaab9cd37a55860ed8c8f1bb5435.js  dir_ff84e7ad4d14ec3e52af19415a5868f1.html  dir_ff84e7ad4d14ec3e52af19415a5868f1.js  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_f.html  functions_func.html  (+59 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  (+66 more)
doc/latex/: annotated.tex  dir_286aa7ad302a5a672c6fd99f3b02678d.tex  dir_82d09425b444363e3b4467d0c156eb11.tex  dir_8864506dae1a8e6a27373e08b8a94d2c.tex  dir_b8ac5d1a50546f363bc0b180119ecdcf.tex  dir_c559b833701b44a8792da1da6d5ececf.tex  dir_d422163b96683743ed3963d4aac17747.tex  dir_d8bfd2e259f0ddcfb2eecd8351ae806f.tex  dir_dbe5e2e62370b34b7d62d99c68f35715.tex  dir_ded90e28d746323109e4a1be828ff560.tex  dir_ee8a88512845056fe687c9dc6dcc23b3.tex  dir_f0b27cfaad8cb8ffcdc2ce80de09c8c1.tex  dir_f11f06811ff1ee49760cfcc25740b9c0.tex  dir_fa6faaab9cd37a55860ed8c8f1bb5435.tex  dir_ff84e7ad4d14ec3e52af19415a5868f1.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
doc/man/man3/: _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_app_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_app_resource_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_include_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_include_lib_bfr_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_include_lib_bfr_handler_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_include_lib_bfr_karta_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_include_lib_bfr_object_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_include_lib_bfr_token_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_src_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_src_handler_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_src_karta_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_src_object_.3  _home_andrij_Develop_Projects_C___af_project_source_projects_battle_for_rokugan_lib_bfr_src_token_.3  _home_andrij_Documents_Sources_C___af_project_main_source_projects_battle_for_rokugan_app_.3  battle.cpp.3  battle.h.3  (+71 more)
lib_bfr/: .gitignore  CMakeLists.txt  battle.cpp  border.cpp  card.cpp  clan.cpp  clanStats.cpp  game.cpp  gameMap.cpp  map.cpp  mission.cpp  player.cpp  province.cpp  provinceToken.cpp  rc_lib_bfr_tr.qrc  region.cpp  turnManager.cpp  turnToken.cpp  turnTokenPlace.cpp  turnTokenPlace.h
lib_bfr/cards/: clan.cpp
lib_bfr/include/: BFRlib  bfrEnum.h  bfrLib.h  bfrLib_pre.h
lib_bfr/include/BFR/: Battle  Card  Clan  Game  GameMap  Mission  Player  Province  ProvinceToken  Region  TurnManager  TurnToken
lib_bfr/include/BFR/Handler/: Battle  Stats  Turn
lib_bfr/include/BFR/Karta/: Border  Map  Province  Territory  TokenBasement
lib_bfr/include/BFR/Object/: Card  Clan  Player  SecretObjective
lib_bfr/include/BFR/Token/: Combat  Control  Honor  Province
lib_bfr/include/lib_bfr/: battle.h  border.h  card.h  clan.h  clanStats.h  game.h  gameMap.h  map.h  mission.h  player.h  province.h  provinceToken.h  region.h  token.h  turnManager.h  turnToken.h
lib_bfr/include/lib_bfr/handler/: battle.h  stats.h  turn.h
lib_bfr/include/lib_bfr/karta/: border.h  map.h  province.h  territory.h  tokenBasement.h
lib_bfr/include/lib_bfr/object/: card.h  clan.h  player.h  secretObjective.h
lib_bfr/include/lib_bfr/token/: combat.h  control.h  honor.h  province.h
lib_bfr/src/: game.cpp
lib_bfr/src/handler/: battle.cpp  stats.cpp  turn.cpp
lib_bfr/src/karta/: border.cpp  map.cpp  province.cpp  territory.cpp  tokenBasement.cpp
lib_bfr/src/object/: card.cpp  clan.cpp  player.cpp  secretObjective.cpp
lib_bfr/src/token/: combat.cpp  control.cpp  honor.cpp  province.cpp
lib_bfr/translate/: bfr_de.ts  bfr_fr.ts  bfr_jp.ts  bfr_pl.ts  bfr_ru.ts  bfr_sp.ts  bfr_ua.ts  rc_lib_bfr_tr.qrc
(+233 files in other folders)
